fix .sf-field-reset on small screens; closes #243

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_event-calendar.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_event-calendar.scss
@@ -71,7 +71,7 @@
 
 
 form.searchandfilter {
-  margin-bottom: $global-margin;
+  margin-bottom: $global-margin*2;
 
   > ul {
     margin: 0 -$global-margin;
@@ -94,7 +94,9 @@ form.searchandfilter {
       }
 
       &.sf-field-reset {
-        max-width: 20%;
+        @include breakpoint(medium) {
+          max-width: 20%;
+        }
       }
     }
 
